Fix split view animations and split view button alignment

--- a/natsumi/modules/urlbar.css
+++ b/natsumi/modules/urlbar.css
@@ -223,7 +223,6 @@ their author(s) have been provided above the used code.
       }
 
       #splitView-action {
-        margin-top: -1px !important;
         margin-left: 0 !important;
       }
 
